crates/strider/tests/snapshots/v3__aarch64be__control__abs_val.snap
---
source: crates/strider/tests/v3_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v2" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "5" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "8" -> "6" [color="#88cc88", label=x0, fontcolor="#cccccc", fontsize=9];
  "9" -> "6" [color="#88cc88", label=x1, fontcolor="#cccccc", fontsize=9];
  "10" -> "6" [color="#88cc88", label=q0, fontcolor="#cccccc", fontsize=9];
  "11" -> "6" [color="#88cc88", label=q1, fontcolor="#cccccc", fontsize=9];
  "11" [label="init\nq1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="init\nq0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="arg[1] ← x1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "12" -> "8" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "12" [label="φ Val", shape=house, fillcolor="#163030"];
  "5" -> "12" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "13" -> "12" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "14" -> "12" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "14" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "15" -> "14" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "15" [label="arg[0] ← x0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="Neg\nu32 → u32", shape=box, fillcolor="#2d2d2d"];
  "14" -> "13" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "7" [label="φ Mem", shape=house, fillcolor="#163030"];
  "5" -> "7" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "16" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "17" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "17" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "18" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v19" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v19" -> "17" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "14" -> "17" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "18" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "20" -> "18" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v21" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v21" -> "18" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "14" -> "18" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "20" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "16" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "18" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v22" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v22" -> "16" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "13" -> "16" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "4" [label="Equal\nu8 → bool", shape=box, fillcolor="#2d2d2d"];
  "23" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "24" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "24" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "23" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "25" -> "23" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "25" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "26" -> "25" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "27" -> "25" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "27" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "26" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "28" -> "26" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "29" -> "26" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "28" [label="ShiftRight:u32", shape=box, fillcolor="#2d2d2d"];
  "14" -> "28" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "30" -> "28" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "30" [label="const 0x1f:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
