crates/strider/tests/snapshots/v3__aarch64be__control__early_return.snap
---
source: crates/strider/tests/v3_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v2" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "v2" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "3" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v4" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "3" -> "v4" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v5" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "3" -> "v5" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "1" -> "3" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "3" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "7" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v8" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "v8" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v5" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "9" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "7" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "10" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "11" -> "9" [color="#88cc88", label=x0, fontcolor="#cccccc", fontsize=9];
  "12" -> "9" [color="#88cc88", label=x1, fontcolor="#cccccc", fontsize=9];
  "13" -> "9" [color="#88cc88", label=q0, fontcolor="#cccccc", fontsize=9];
  "14" -> "9" [color="#88cc88", label=q1, fontcolor="#cccccc", fontsize=9];
  "14" [label="init\nq1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="init\nq0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "12" [label="arg[1] ← x1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "11" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "15" -> "11" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "15" [label="φ Val", shape=house, fillcolor="#163030"];
  "7" -> "15" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "16" -> "15" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "17" -> "15" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "17" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "16" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "16" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "18" -> "16" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "19" -> "16" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "18" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "20" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "21" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "21" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "20" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "20" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "18" -> "20" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "22" -> "20" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "10" [label="φ Mem", shape=house, fillcolor="#163030"];
  "7" -> "10" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "23" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "24" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "24" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "25" -> "24" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v26" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v26" -> "24" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "27" -> "24" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "27" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "28" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "25" [label="φ Mem", shape=house, fillcolor="#163030"];
  "1" -> "25" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "29" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "30" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "30" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "31" -> "30" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v32" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v32" -> "30" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "33" -> "30" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "33" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "31" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "34" -> "31" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v35" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v35" -> "31" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "36" -> "31" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "36" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "37" -> "36" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "37" [label="arg[0] ← x0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "34" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "29" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "25" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v38" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v38" -> "29" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "18" -> "29" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "23" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "25" -> "23" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v39" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v39" -> "23" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "16" -> "23" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "40" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "40" -> "v8" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "40" -> "v2" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "v4" -> "40" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "41" -> "40" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "41" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "42" -> "41" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "43" -> "41" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "43" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "42" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "44" -> "42" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "45" -> "42" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "45" [label="const 0xfffffff9:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "44" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "44" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "18" -> "44" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "46" -> "44" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "46" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "6" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "47" -> "6" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "48" -> "6" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "48" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "25" -> "48" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "49" -> "48" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "49" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "28" -> "49" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "50" -> "49" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "50" [label="const 0xfffffffffffffff8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "47" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "47" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "18" -> "47" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "51" -> "47" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "51" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
