crates/strider/tests/snapshots/v3__aarch64be__control__factorial.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v2" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "v2" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "3" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v4" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "3" -> "v4" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "3" -> "v2" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "1" -> "3" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "5" -> "3" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "6" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v4" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "8" -> "6" [color="#88cc88", label=x0, fontcolor="#cccccc", fontsize=9];
  "9" -> "6" [color="#88cc88", label=x1, fontcolor="#cccccc", fontsize=9];
  "10" -> "6" [color="#88cc88", label=q0, fontcolor="#cccccc", fontsize=9];
  "11" -> "6" [color="#88cc88", label=q1, fontcolor="#cccccc", fontsize=9];
  "11" [label="init\nq1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="init\nq0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="arg[1] ← x1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "12" -> "8" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "12" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "12" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "13" -> "12" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "14" -> "12" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "14" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "13" [label="Mul:u32", shape=box, fillcolor="#2d2d2d"];
  "15" -> "13" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "16" -> "13" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "16" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "16" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "17" -> "16" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "18" -> "16" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "18" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "17" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "19" -> "17" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "20" -> "17" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "20" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "19" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "19" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "17" -> "19" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "21" -> "19" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "21" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "15" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "15" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "13" -> "15" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "22" -> "15" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "7" [label="φ Mem", shape=house, fillcolor="#163030"];
  "1" -> "7" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "23" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "24" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "24" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "25" -> "24" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "26" -> "24" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "27" -> "24" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "27" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "26" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "28" -> "26" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "29" -> "26" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0xfffffffffffffff4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "28" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "25" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "30" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "31" -> "25" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "32" -> "25" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "32" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "31" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "28" -> "31" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "33" -> "31" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "33" [label="const 0xfffffffffffffff8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "30" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "34" -> "30" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "35" -> "30" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "36" -> "30" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "36" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "37" -> "36" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "37" [label="arg[0] ← x0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "35" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "28" -> "35" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "38" -> "35" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "38" [label="const 0xfffffffffffffffc:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "34" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "23" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "39" -> "23" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "26" -> "23" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "17" -> "23" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "39" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "7" -> "39" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "31" -> "39" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "13" -> "39" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "5" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "40" -> "5" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "40" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "41" -> "40" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "41" [label="And:bool", shape=box, fillcolor="#2d2d2d"];
  "42" -> "41" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "43" -> "41" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "43" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "44" -> "43" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "44" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "45" -> "44" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "45" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "46" -> "45" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "46" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "47" -> "46" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "48" -> "46" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "48" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "48" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "35" -> "48" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "47" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "47" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "17" -> "47" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "49" -> "47" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "49" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "42" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "50" -> "42" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "50" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "51" -> "50" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "51" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "52" -> "51" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "52" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "53" -> "52" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "53" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "54" -> "53" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "54" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "47" -> "54" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "48" -> "54" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
}
